qiz264 - 1) fix issue of background image not stretching; 2) hiding vertical scrollbar

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -1,5 +1,9 @@
 .home-background {
-  height: 400px;
-  background-size: cover;
+  width: 100%;
+  min-height: 400px;
   background: no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
