--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  /*-ms-overflow-style: -ms-autohiding-scrollbar;*/
+  -ms-overflow-style: none;  /* IE 10+ */
+  /* overflow: -moz-scrollbars-none;   Firefox */
+}
+::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+  /* width: 0px;   remove scrollbar space */
+  /* background: transparent;   optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+/*::-webkit-scrollbar-thumb {*/
+  /*background: #FF0000;*/
+/*}*/
